Refactor: Improved warehouse service logic and add logging